fixed alignment issue with max value of range control

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -65,7 +65,7 @@ html, body {
 }
 .legend .max {
   float: right;
-  margin-right: -15px;
+  margin-right: -25px;
 }
 
 .legend .instructions {
